Project EAIMS {
  database_type: 'MySQL'
  Note: 'Enterprise IT Asset & Infrastructure Management System - ERD'
}

Table Roles {
  Id int [pk, increment]
  Name varchar(50) [not null, unique, note: 'Admin IT, Manager, Technician']
}

Table Departments {
  Id int [pk, increment]
  Name varchar(100) [not null]
  Description varchar(255)
}

Table Users {
  Id int [pk, increment]
  FullName varchar(100) [not null]
  Email varchar(150) [not null, unique]
  PasswordHash varchar(255) [not null]
  RoleId int [not null]
  DepartmentId int [not null]
  IsActive boolean [not null, default: true]
  RefreshToken varchar(255) [note: 'Bo sung khi chot ERD - phuc vu POST /api/v1/auth/refresh-token']
  RefreshTokenExpiryTime datetime
  CreatedAt datetime [not null, default: `now()`]

  indexes {
    RoleId
    DepartmentId
  }
}

Table AssetCategories {
  Id int [pk, increment]
  Name varchar(100) [not null, unique, note: 'may tinh, man hinh, may in, switch/router, thiet bi luu tru...']
}

Table Assets {
  Id int [pk, increment]
  AssetCode varchar(50) [not null, unique]
  Name varchar(150) [not null]
  CategoryId int [not null]
  SerialNumber varchar(100)
  Specification varchar(500)
  OperatingSystem varchar(100)
  DepartmentId int [not null]
  Status tinyint [not null, note: '0=InUse,1=Maintenance,2=Broken,3=Disposed']
  PurchaseDate date
  WarrantyExpiry date
  CreatedAt datetime [not null, default: `now()`]

  indexes {
    CategoryId
    DepartmentId
    Status
  }
}

Table SoftwareLicenses {
  Id int [pk, increment]
  SoftwareName varchar(150) [not null]
  LicenseKey varchar(255) [not null, unique]
  ExpiryDate date [not null]
  MaxUsage int [not null]
  Notes varchar(500)

  indexes {
    ExpiryDate
  }

  Note: 'CurrentUsage KHONG luu cot rieng - tinh bang COUNT(AssetSoftwareLicenses) de tranh lech du lieu'
}

Table AssetSoftwareLicenses {
  Id int [pk, increment]
  AssetId int [not null]
  LicenseId int [not null]
  AssignedDate date [not null]

  indexes {
    (AssetId, LicenseId) [unique, note: 'tranh gan trung 1 license cho cung 1 asset']
  }
}

Table MaintenanceTickets {
  Id int [pk, increment]
  AssetId int [not null]
  IssueDescription varchar(1000) [not null]
  Status tinyint [not null, note: '0=Pending,1=Resolved,2=Failed']
  TechnicianId int [note: 'nullable - co the chua gan luc moi tao phieu']
  ReportedDate datetime [not null, default: `now()`]
  ResolvedDate datetime
  Notes varchar(1000)

  indexes {
    AssetId
    TechnicianId
    Status
  }
}

Table AssetAllocations {
  Id int [pk, increment]
  AssetId int [not null]
  DepartmentId int [not null]
  RecipientName varchar(100) [not null]
  AllocatedDate date [not null]
  ReturnedDate date [note: 'null = con dang cap phat']
  HandoverNote varchar(500)
  Status tinyint [not null, note: '0=Allocated,1=Returned']

  indexes {
    AssetId
    DepartmentId
  }
}

Table AuditLogs {
  Id bigint [pk, increment]
  UserId int [not null]
  Action varchar(50) [not null, note: 'Create/Update/Delete']
  EntityName varchar(100) [not null]
  EntityId int [not null]
  OldValue text
  NewValue text
  Timestamp datetime [not null, default: `now()`]

  indexes {
    UserId
    Timestamp
  }
}

Table BudgetForecasts {
  Id int [pk, increment]
  Year int [not null]
  DepartmentId int [not null]
  EstimatedReplacementCount int [not null]
  EstimatedBudget decimal(18,2) [not null]
  Notes varchar(500)

  indexes {
    (Year, DepartmentId) [unique, note: 'moi phong ban chi co 1 du bao/nam']
  }

  Note: 'Uu tien Could - MoSCoW, co the cat giam'
}

Table ImportLogs {
  Id int [pk, increment]
  FileName varchar(255) [not null]
  ImportedBy int [not null]
  TotalRows int [not null]
  SuccessRows int [not null]
  FailedRows int [not null]
  ImportedAt datetime [not null, default: `now()`]

  Note: 'Uu tien Should - MoSCoW'
}

Ref: Users.RoleId > Roles.Id
Ref: Users.DepartmentId > Departments.Id
Ref: Assets.CategoryId > AssetCategories.Id
Ref: Assets.DepartmentId > Departments.Id
Ref: AssetSoftwareLicenses.AssetId > Assets.Id
Ref: AssetSoftwareLicenses.LicenseId > SoftwareLicenses.Id
Ref: MaintenanceTickets.AssetId > Assets.Id
Ref: MaintenanceTickets.TechnicianId > Users.Id
Ref: AssetAllocations.AssetId > Assets.Id
Ref: AssetAllocations.DepartmentId > Departments.Id
Ref: AuditLogs.UserId > Users.Id
Ref: BudgetForecasts.DepartmentId > Departments.Id
Ref: ImportLogs.ImportedBy > Users.Id
